--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             const config = configModule.default;
 
             config.scene = config.scene.map(scene => {
-                if (scene === MainGameScene) {
-                    return class extends MainGameScene {
+                if (scene.name === 'MainGameScene') { // Use the scene name to match MainGameScene
+                    return class extends scene {
                         init(data) {
                             super.init({ ...data, shouldZoom });
                         }
@@ -50,7 +50,7 @@
             });
 
             document.getElementById('game-container').style.display = 'block';
-            new Phaser.Game(config);
+            window.game = new Phaser.Game(config); // Make sure game instance is accessible globally
         }
 
         window.onload = startGame;
@@ -76,6 +76,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.80.1/phaser.min.js"></script>
     <script type="module">
         import MainGameScene from './mainGame.js'; // Import MainGameScene
+
+        // Ensure MainGameScene is globally accessible for dynamic class extension
+        window.MainGameScene = MainGameScene;
     </script>
 </body>
 </html>
