--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     <div id="game-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.80.1/phaser.min.js"></script>
     <script type="module">
-        import MainGameScene from './mainGame.js';
-        import MenuScene from './menuScene.js';
-        import PitcherSelectionScene from './pitcherSelection.js';
+        import MainGameScene from 'mainGame.js';
+        import MenuScene from 'menu.js';
+        import PitcherSelectionScene from 'pitcherSelection.js';
 
         // Ensure scenes are globally accessible for dynamic class extension
         window.MainGameScene = MainGameScene;
